# caravan

./: .gitattributes  .gitignore  README.md  go.mod  go.sum  insert.json
.github/workflows/: publish-dotnet-sdk.yml  publish-elixir-sdk.yml  publish-go-sdk.yml  publish-py-sdk.yml  publish-ruby-sdk.yml  publish-rust-sdk.yml  publish-ts-sdk.yml
cmd/caravan/: main.go  up.go
cmd/supeux/: main.go
docs/: aws_service_groups.md  azure_service_groups.md  caravan_abstraction_v1.md  caravan_abstraction_v2.md  caravan_abstraction_v3.md  caravan_abstraction_v4.md  cloud_providers.md  compiler-language.md  considerations.md  development_plan.md  gcp_service_groups.md  go_api_diffs.md  hcl_walkthrough.md  ir.md  mapping_aws_to_go.md  mapping_aws_to_python.md  mapping_aws_to_rust.md  mapping_aws_to_typescript.md  mapping_go_to_aws.md  mapping_python_to_aws.md  mapping_rust_to_aws.md  mapping_typescript_to_aws.md  poc_groups_to_code.md  poc_rpc_sdk.md  poc_yaml_spec.md  python_api_diffs.md  rust_api_diffs.md  rust_caravan_style.md  supeux_abstraction_v1.md  supeux_abstraction_v2.md  supeux_abstraction_v3.md  supeux_abstraction_v4.md  thesis.md  typescript_api_diffs.md
internal/compiler/: compile.go  compile_test.go  diag.go  hybrid_target_test.go  kinds.go  lex.go  normalize.go  parse.go  resolve.go  resolve_iam.go  resolve_iam_test.go  resource_endpoints.go  traverse.go  types.go  variants.go
internal/compiler/emit/: accumulator.go  accumulator_test.go  base_compose_scan.go  compose.go  compose_fargate_build.go  compose_hybrid_test.go  compose_test.go  env_template.go  manifest.go  manifest_test.go  resources.go  seam_server.go
internal/compiler/emit/hcl/: bindings.go  compute.go  compute_fargate.go  compute_lambda.go  hcl.go  hcl_test.go  iam.go  naming.go  resources.go  secrets.go  vpc.go
internal/compiler/testdata/: dev-bootstrap.override.golden.yaml  invoice-parse-bootstrap.dev-bootstrap.spec.json  invoice-parse-bootstrap.dev-inproc.spec.json  invoice-parse-bootstrap.dev-rabbitmq-flip.spec.json  invoice-parse-bootstrap.yaml  invoice-parse-two-seams.yaml
rpc/dotnet/: Caravan.Rpc.csproj  README.md
rpc/dotnet/src/: Wagon.cs
rpc/elixir/: README.md  mix.exs
rpc/elixir/lib/: caravan_rpc.ex
rpc/go/: README.md  caravanrpc.go  go.mod
rpc/python/: README.md  pyproject.toml
rpc/python/src/caravan_rpc/: __init__.py  _codec.py  _proxy.py  _registry.py  lambda_handler.py  serve.py
rpc/python/src/caravan_rpc/resources/: __init__.py  auto_register.py  blob_store.py  queue.py
rpc/python/tests/: test_codec.py  test_proxy.py  test_registry.py  test_resources.py  test_serve.py  test_wagon.py
rpc/ruby/: README.md  caravan-rpc.gemspec
rpc/ruby/lib/caravan/: rpc.rb
rpc/ruby/lib/caravan/rpc/: version.rb
rpc/rust/: Cargo.toml
rpc/rust/caravan-rpc/: Cargo.toml  README.md
rpc/rust/caravan-rpc-macros/: Cargo.toml  README.md
rpc/rust/caravan-rpc-macros/src/: lib.rs
rpc/rust/caravan-rpc/src/: codec.rs  dispatch.rs  errors.rs  lib.rs  peers.rs  server.rs
rpc/rust/caravan-rpc/src/resources/: auto_register.rs  blob_store.rs  mod.rs  queue.rs
rpc/rust/caravan-rpc/tests/: end_to_end_http.rs  macro_async.rs  macro_sync_borrowed.rs  macro_sync_owned.rs  registry.rs  resources_test.rs  run_or_serve.rs
rpc/rust/src/: lib.rs
rpc/typescript/: README.md  index.d.ts  index.js  package.json
