[project]
name = "caravan-rpc"
version = "0.1.0.dev0"
description = "Runtime SDK for the Caravan application-definition compiler. Hand-typed functional release for the B0 bootstrap; lifts to 0.1.0 once Phase 2 closes."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Rachapong Chirarattananon" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
]
keywords = ["caravan", "rpc", "deployment", "infrastructure", "compiler"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/paulxiep/caravan"
Repository = "https://github.com/paulxiep/caravan"
Issues = "https://github.com/paulxiep/caravan/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caravan_rpc"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
