[package]
name = "caravan-rpc-macros"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["Rachapong Chirarattananon"]
description = "Procedural macros for the Caravan RPC SDK. Pre-release placeholder."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paulxiep/caravan"
homepage = "https://github.com/paulxiep/caravan"
documentation = "https://docs.rs/caravan-rpc-macros"
keywords = ["caravan", "rpc", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
include = ["src/**/*", "README.md"]

[lib]
proc-macro = true
path = "src/lib.rs"
